# Give-me-some-Credit

./: .dockerignore  .gitignore  Give_me_some_credit.ipynb  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  preprocess.py  pyproject.toml  train.py
api/: main.py  ml_service.py  requirements.txt  schemas.py
frontend/: Dockerfile  app.py
models/: xgboost_base_optimizado.json  xgboost_smote_optimizado.json
